# carespace-python-sdk

./: README.md  pyproject.toml  pytest.ini
carespace_sdk/: __init__.py  client.py  exceptions.py  http_client.py  models.py
carespace_sdk/api/: __init__.py  auth.py  clients.py  programs.py  users.py
docs/: README.md  api-reference.md  contributing.md  migration-guide.md  usage-guide.md
tests/: __init__.py  conftest.py  test_auth.py  test_client.py  test_clients.py  test_exceptions.py  test_http_client.py  test_integration.py  test_models.py  test_programs.py  test_users.py
